# IR-Elasticsearch-Agent

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: agent_tools.py  config.py  elasticsearch_client.py  embeddings.py  indexer.py  llm_chain.py  retriever.py
