[project]
name = "rag-es"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch>=9.2.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.0",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.2",
]
